Fix form-control style & dark mode

--- a/apps/authoring/src/renderer/pages/editor/elements/header/editor-header.module.scss
+++ b/apps/authoring/src/renderer/pages/editor/elements/header/editor-header.module.scss
@@ -2,6 +2,8 @@
 @import '../../../../styles/variables';
 
 .filename {
+  --owl-input-color: var(--bs-body-color);
+
   display: inline-grid;
   align-items: center;
   position: relative;
